fix double borders

--- a/free-the-clones.css
+++ b/free-the-clones.css
@@ -1,6 +1,7 @@
 .square {
   color: transparent;
-  border: 1px solid lightgray;
+  border: solid lightgray;
+  border-width: 1px 0 0 1px;
   font-size: 200%;
   height: 1em;
   width: 1em;
@@ -10,6 +11,14 @@
   display: inline-block;
   line-height: 1em;
   font-family: FontAwesome;
+}
+
+.row:last-of-type .square {
+  border-bottom-width: 1px;
+}
+
+.square:last-of-type {
+  border-right-width: 1px;
 }
 
 .square.pebble.clonable {
